<resources>
    <string name="app_name">Booking App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_text">Button</string>
    <string name="button_text_new">Change!</string>
    <string name="button_newtext">Change!</string>
    <string name="login_button_text">Login</string>
    <string name="password_textfield_hinttext">Enter password</string>
    <string name="email_textfield_hinttext">Enter email</string>
    <string name="label">test</string>
    <string name="create_account_button_text">Create new account</string>
    <string name="create_account_text">Create account</string>
    <string name="create_password_edittext_hint">Create password</string>
    <string name="create_email_edittext_hint">Create email</string>
    <string name="create_email_helpertext">Example: your@email.com</string>
    <string name="create_password_helpertext">Minimum 6 characters contains: [a–z,A–Z,0–9]</string>
    <string name="logout_button_text">Logout</string>
    <string name="button_text_next">Next</string>
    <string name="previous">previous</string>
    <string name="clock_contentdesc">Simplified clock image</string>
    <string name="timeframe_text">Timeframe</string>
    <string name="status_text">status</string>
    <string name="button_book">book</string>
    <string name="im_court1_contentdesc">Image of squash court number 1</string>
    <string name="im_court2_contentdesc">Image of squash court number 2</string>
    <string name="im_court3_contentdesc">Image of squash court number 3</string>
    <string name="im_court4_contentdesc">Image of squash court number 4</string>
    <string name="summary_text">Summary</string>
    <string name="button_new_reservation">Make another reservation</string>
    <string name="btn_manage_reservation_text">Manage my reservations</string>
    <string name="status_booked">Fully booked</string>
    <string name="button_back">Back</string>
    <string name="summary_title">Your bookings</string>
    <string name="cancel_reservation_text">Cancel reservation</string>
    <string name="managereservations_date_text">Date:</string>
    <string name="managereservations_time">Time:</string>
    <string name="managereservations_courts">Court(s):</string>

    <string-array name="stepview_entries">
        <item>Day</item>
        <item>Time</item>
        <item>Court</item>
    </string-array>

</resources>