<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rv_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/customborder"
    android:padding="16dp"
    android:layout_margin="2dp"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/im_clock"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/clock_contentdesc"
        android:outlineAmbientShadowColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_clock" />

    <TextView
        android:id="@+id/tv_timeframe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/timeframe_text"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_status"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/status_text"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/im_clock"
        app:layout_constraintTop_toBottomOf="@+id/tv_timeframe" />

</androidx.constraintlayout.widget.ConstraintLayout>