<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".summary.SummaryFragment">

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/summary_text"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_summaryday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/tv_summaryday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Day"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_summarytimeslot"
            app:layout_constraintEnd_toEndOf="@+id/tv_summary"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv_summary"
            app:layout_constraintTop_toBottomOf="@+id/tv_summary" />

        <TextView
            android:id="@+id/tv_summarytimeslot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Timeslot"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_summarycourtnumber"
            app:layout_constraintEnd_toEndOf="@+id/tv_summary"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv_summary"
            app:layout_constraintTop_toBottomOf="@+id/tv_summaryday" />

        <TextView
            android:id="@+id/tv_summarycourtnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Court number(s)"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_new_reservation"
            app:layout_constraintEnd_toEndOf="@+id/tv_summary"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv_summary"
            app:layout_constraintTop_toBottomOf="@+id/tv_summarytimeslot" />

        <Button
            android:id="@+id/btn_new_reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/button_new_reservation"
            app:layout_constraintBottom_toTopOf="@+id/btn_summary_logout"
            app:layout_constraintEnd_toEndOf="@+id/tv_summary"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv_summary" />

        <Button
            android:id="@+id/btn_summary_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/logout_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_summary"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/tv_summary" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>